VlangCompiler/y.output
State 1 conflicts: 6 shift/reduce


Grammar

    0 $accept: program $end

    1 program: block

    2 block: LBRACE statement_list RBRACE

    3 statement_list: /* empty */
    4               | statement
    5               | statement_list statement

    6 statement: declaration
    7          | assignment
    8          | conditional_statement
    9          | loop_statement
   10          | print_statement

   11 declaration: SCL ID SEMI
   12            | VEC ID LBRACE INT_LITERAL RBRACE SEMI

   13 assignment: ID '=' expression SEMI

   14 conditional_statement: IF expression block

   15 loop_statement: LOOP expression block

   16 print_statement: PRINT '"' ID '"' ':' expression_list SEMI

   17 expression_list: expression
   18                | expression_list ',' expression

   19 expression: term
   20           | expression ADD term
   21           | expression SUB term

   22 term: factor
   23     | term MUL factor
   24     | term DIV factor
   25     | term AT factor

   26 factor: INT_LITERAL
   27       | vec_literal
   28       | ID
   29       | ID COLON factor
   30       | LPAREN expression RPAREN

   31 vec_literal: LBRACK INT_LITERAL RBRACK
   32            | LBRACK INT_LITERAL COMMA int_list RBRACK

   33 int_list: INT_LITERAL
   34         | int_list COMMA INT_LITERAL


Terminals, with rules where they appear

$end (0) 0
'"' (34) 16
',' (44) 18
':' (58) 16
'=' (61) 13
error (256)
SCL (258) 11
VEC (259) 12
IF (260) 14
LOOP (261) 15
PRINT (262) 16
ID (263) 11 12 13 16 28 29
INT_LITERAL (264) 12 26 31 32 33 34
AT (265) 25
ADD (266) 20
SUB (267) 21
MUL (268) 23
DIV (269) 24
LBRACE (270) 2 12
RBRACE (271) 2 12
LPAREN (272) 30
RPAREN (273) 30
LBRACK (274) 31 32
RBRACK (275) 31 32
COLON (276) 29
SEMI (277) 11 12 13 16
COMMA (278) 32 34


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1, on right: 0
block (30)
    on left: 2, on right: 1 14 15
statement_list (31)
    on left: 3 4 5, on right: 2 5
statement (32)
    on left: 6 7 8 9 10, on right: 4 5
declaration (33)
    on left: 11 12, on right: 6
assignment (34)
    on left: 13, on right: 7
conditional_statement (35)
    on left: 14, on right: 8
loop_statement (36)
    on left: 15, on right: 9
print_statement (37)
    on left: 16, on right: 10
expression_list (38)
    on left: 17 18, on right: 16 18
expression (39)
    on left: 19 20 21, on right: 13 14 15 17 18 20 21 30
term (40)
    on left: 22 23 24 25, on right: 19 20 21 23 24 25
factor (41)
    on left: 26 27 28 29 30, on right: 22 23 24 25 29
vec_literal (42)
    on left: 31 32, on right: 27
int_list (43)
    on left: 33 34, on right: 32 34


state 0

    0 $accept: . program $end

    LBRACE  shift, and go to state 1

    program  go to state 2
    block    go to state 3


state 1

    2 block: LBRACE . statement_list RBRACE

    SCL    shift, and go to state 4
    VEC    shift, and go to state 5
    IF     shift, and go to state 6
    LOOP   shift, and go to state 7
    PRINT  shift, and go to state 8
    ID     shift, and go to state 9

    SCL       [reduce using rule 3 (statement_list)]
    VEC       [reduce using rule 3 (statement_list)]
    IF        [reduce using rule 3 (statement_list)]
    LOOP      [reduce using rule 3 (statement_list)]
    PRINT     [reduce using rule 3 (statement_list)]
    ID        [reduce using rule 3 (statement_list)]
    $default  reduce using rule 3 (statement_list)

    statement_list         go to state 10
    statement              go to state 11
    declaration            go to state 12
    assignment             go to state 13
    conditional_statement  go to state 14
    loop_statement         go to state 15
    print_statement        go to state 16


state 2

    0 $accept: program . $end

    $end  shift, and go to state 17


state 3

    1 program: block .

    $default  reduce using rule 1 (program)


state 4

   11 declaration: SCL . ID SEMI

    ID  shift, and go to state 18


state 5

   12 declaration: VEC . ID LBRACE INT_LITERAL RBRACE SEMI

    ID  shift, and go to state 19


state 6

   14 conditional_statement: IF . expression block

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression   go to state 24
    term         go to state 25
    factor       go to state 26
    vec_literal  go to state 27


state 7

   15 loop_statement: LOOP . expression block

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression   go to state 28
    term         go to state 25
    factor       go to state 26
    vec_literal  go to state 27


state 8

   16 print_statement: PRINT . '"' ID '"' ':' expression_list SEMI

    '"'  shift, and go to state 29


state 9

   13 assignment: ID . '=' expression SEMI

    '='  shift, and go to state 30


state 10

    2 block: LBRACE statement_list . RBRACE
    5 statement_list: statement_list . statement

    SCL     shift, and go to state 4
    VEC     shift, and go to state 5
    IF      shift, and go to state 6
    LOOP    shift, and go to state 7
    PRINT   shift, and go to state 8
    ID      shift, and go to state 9
    RBRACE  shift, and go to state 31

    statement              go to state 32
    declaration            go to state 12
    assignment             go to state 13
    conditional_statement  go to state 14
    loop_statement         go to state 15
    print_statement        go to state 16


state 11

    4 statement_list: statement .

    $default  reduce using rule 4 (statement_list)


state 12

    6 statement: declaration .

    $default  reduce using rule 6 (statement)


state 13

    7 statement: assignment .

    $default  reduce using rule 7 (statement)


state 14

    8 statement: conditional_statement .

    $default  reduce using rule 8 (statement)


state 15

    9 statement: loop_statement .

    $default  reduce using rule 9 (statement)


state 16

   10 statement: print_statement .

    $default  reduce using rule 10 (statement)


state 17

    0 $accept: program $end .

    $default  accept


state 18

   11 declaration: SCL ID . SEMI

    SEMI  shift, and go to state 33


state 19

   12 declaration: VEC ID . LBRACE INT_LITERAL RBRACE SEMI

    LBRACE  shift, and go to state 34


state 20

   28 factor: ID .
   29       | ID . COLON factor

    COLON  shift, and go to state 35

    $default  reduce using rule 28 (factor)


state 21

   26 factor: INT_LITERAL .

    $default  reduce using rule 26 (factor)


state 22

   30 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression   go to state 36
    term         go to state 25
    factor       go to state 26
    vec_literal  go to state 27


state 23

   31 vec_literal: LBRACK . INT_LITERAL RBRACK
   32            | LBRACK . INT_LITERAL COMMA int_list RBRACK

    INT_LITERAL  shift, and go to state 37


state 24

   14 conditional_statement: IF expression . block
   20 expression: expression . ADD term
   21           | expression . SUB term

    ADD     shift, and go to state 38
    SUB     shift, and go to state 39
    LBRACE  shift, and go to state 1

    block  go to state 40


state 25

   19 expression: term .
   23 term: term . MUL factor
   24     | term . DIV factor
   25     | term . AT factor

    AT   shift, and go to state 41
    MUL  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 19 (expression)


state 26

   22 term: factor .

    $default  reduce using rule 22 (term)


state 27

   27 factor: vec_literal .

    $default  reduce using rule 27 (factor)


state 28

   15 loop_statement: LOOP expression . block
   20 expression: expression . ADD term
   21           | expression . SUB term

    ADD     shift, and go to state 38
    SUB     shift, and go to state 39
    LBRACE  shift, and go to state 1

    block  go to state 44


state 29

   16 print_statement: PRINT '"' . ID '"' ':' expression_list SEMI

    ID  shift, and go to state 45


state 30

   13 assignment: ID '=' . expression SEMI

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression   go to state 46
    term         go to state 25
    factor       go to state 26
    vec_literal  go to state 27


state 31

    2 block: LBRACE statement_list RBRACE .

    $default  reduce using rule 2 (block)


state 32

    5 statement_list: statement_list statement .

    $default  reduce using rule 5 (statement_list)


state 33

   11 declaration: SCL ID SEMI .

    $default  reduce using rule 11 (declaration)


state 34

   12 declaration: VEC ID LBRACE . INT_LITERAL RBRACE SEMI

    INT_LITERAL  shift, and go to state 47


state 35

   29 factor: ID COLON . factor

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    factor       go to state 48
    vec_literal  go to state 27


state 36

   20 expression: expression . ADD term
   21           | expression . SUB term
   30 factor: LPAREN expression . RPAREN

    ADD     shift, and go to state 38
    SUB     shift, and go to state 39
    RPAREN  shift, and go to state 49


state 37

   31 vec_literal: LBRACK INT_LITERAL . RBRACK
   32            | LBRACK INT_LITERAL . COMMA int_list RBRACK

    RBRACK  shift, and go to state 50
    COMMA   shift, and go to state 51


state 38

   20 expression: expression ADD . term

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    term         go to state 52
    factor       go to state 26
    vec_literal  go to state 27


state 39

   21 expression: expression SUB . term

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    term         go to state 53
    factor       go to state 26
    vec_literal  go to state 27


state 40

   14 conditional_statement: IF expression block .

    $default  reduce using rule 14 (conditional_statement)


state 41

   25 term: term AT . factor

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    factor       go to state 54
    vec_literal  go to state 27


state 42

   23 term: term MUL . factor

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    factor       go to state 55
    vec_literal  go to state 27


state 43

   24 term: term DIV . factor

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    factor       go to state 56
    vec_literal  go to state 27


state 44

   15 loop_statement: LOOP expression block .

    $default  reduce using rule 15 (loop_statement)


state 45

   16 print_statement: PRINT '"' ID . '"' ':' expression_list SEMI

    '"'  shift, and go to state 57


state 46

   13 assignment: ID '=' expression . SEMI
   20 expression: expression . ADD term
   21           | expression . SUB term

    ADD   shift, and go to state 38
    SUB   shift, and go to state 39
    SEMI  shift, and go to state 58


state 47

   12 declaration: VEC ID LBRACE INT_LITERAL . RBRACE SEMI

    RBRACE  shift, and go to state 59


state 48

   29 factor: ID COLON factor .

    $default  reduce using rule 29 (factor)


state 49

   30 factor: LPAREN expression RPAREN .

    $default  reduce using rule 30 (factor)


state 50

   31 vec_literal: LBRACK INT_LITERAL RBRACK .

    $default  reduce using rule 31 (vec_literal)


state 51

   32 vec_literal: LBRACK INT_LITERAL COMMA . int_list RBRACK

    INT_LITERAL  shift, and go to state 60

    int_list  go to state 61


state 52

   20 expression: expression ADD term .
   23 term: term . MUL factor
   24     | term . DIV factor
   25     | term . AT factor

    AT   shift, and go to state 41
    MUL  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 20 (expression)


state 53

   21 expression: expression SUB term .
   23 term: term . MUL factor
   24     | term . DIV factor
   25     | term . AT factor

    AT   shift, and go to state 41
    MUL  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 21 (expression)


state 54

   25 term: term AT factor .

    $default  reduce using rule 25 (term)


state 55

   23 term: term MUL factor .

    $default  reduce using rule 23 (term)


state 56

   24 term: term DIV factor .

    $default  reduce using rule 24 (term)


state 57

   16 print_statement: PRINT '"' ID '"' . ':' expression_list SEMI

    ':'  shift, and go to state 62


state 58

   13 assignment: ID '=' expression SEMI .

    $default  reduce using rule 13 (assignment)


state 59

   12 declaration: VEC ID LBRACE INT_LITERAL RBRACE . SEMI

    SEMI  shift, and go to state 63


state 60

   33 int_list: INT_LITERAL .

    $default  reduce using rule 33 (int_list)


state 61

   32 vec_literal: LBRACK INT_LITERAL COMMA int_list . RBRACK
   34 int_list: int_list . COMMA INT_LITERAL

    RBRACK  shift, and go to state 64
    COMMA   shift, and go to state 65


state 62

   16 print_statement: PRINT '"' ID '"' ':' . expression_list SEMI

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression_list  go to state 66
    expression       go to state 67
    term             go to state 25
    factor           go to state 26
    vec_literal      go to state 27


state 63

   12 declaration: VEC ID LBRACE INT_LITERAL RBRACE SEMI .

    $default  reduce using rule 12 (declaration)


state 64

   32 vec_literal: LBRACK INT_LITERAL COMMA int_list RBRACK .

    $default  reduce using rule 32 (vec_literal)


state 65

   34 int_list: int_list COMMA . INT_LITERAL

    INT_LITERAL  shift, and go to state 68


state 66

   16 print_statement: PRINT '"' ID '"' ':' expression_list . SEMI
   18 expression_list: expression_list . ',' expression

    SEMI  shift, and go to state 69
    ','   shift, and go to state 70


state 67

   17 expression_list: expression .
   20 expression: expression . ADD term
   21           | expression . SUB term

    ADD  shift, and go to state 38
    SUB  shift, and go to state 39

    $default  reduce using rule 17 (expression_list)


state 68

   34 int_list: int_list COMMA INT_LITERAL .

    $default  reduce using rule 34 (int_list)


state 69

   16 print_statement: PRINT '"' ID '"' ':' expression_list SEMI .

    $default  reduce using rule 16 (print_statement)


state 70

   18 expression_list: expression_list ',' . expression

    ID           shift, and go to state 20
    INT_LITERAL  shift, and go to state 21
    LPAREN       shift, and go to state 22
    LBRACK       shift, and go to state 23

    expression   go to state 71
    term         go to state 25
    factor       go to state 26
    vec_literal  go to state 27


state 71

   18 expression_list: expression_list ',' expression .
   20 expression: expression . ADD term
   21           | expression . SUB term

    ADD  shift, and go to state 38
    SUB  shift, and go to state 39

    $default  reduce using rule 18 (expression_list)
